--- a/src/Components/itemTier/ItemTier.css
+++ b/src/Components/itemTier/ItemTier.css
@@ -1,5 +1,5 @@
 .iTier {
-    width: 280px;
+    width: 300px;
     text-align: center;
 }
 
@@ -16,12 +16,13 @@
     border-style: solid ;
     display: inline-block;
     border-width: 1px;
+    border:2px double #000000;
 }
 
 .iTier .footer {
     background: #FFFFFF;
-    border-radius: 0px 0px 10px 10px;
-    box-shadow: 5px 5px 15px rgba(255, 255, 255, 0.08);
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
     padding-top: 0.1px;
 }
 
@@ -33,6 +34,6 @@
 .iTier .footer h5 {
     font-size: 10px;
     line-height: 22px;
-    color: #2c2a2a;
+    color: #000000;
     padding: 5px;
 }
