--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.title{
+  border-bottom: 4px solid;
+  display: inline-block;
+}
