--- a/src/Components/Tier/Tier.css
+++ b/src/Components/Tier/Tier.css
@@ -1,15 +1,21 @@
 .tier {
-    padding: 32px;
     text-align: center;
+    padding: 32px;
     margin-bottom: 10px;
-    border:2px dotted #000000;
+    border:1px dotted #000000;
+    background-blend-mode: multiply;
+    position: relative;
 }
 
 .tier h3{
     font-size: 32px;
-    border-bottom: 4px solid;
     display: inline-block;
+    border: dotted 4px;
+    margin-bottom: 100px;
     padding-bottom: 8px;
+    background-color: #ffffff;
+    padding: 45px;
+    border-radius: 3px;
 }
 
 .tier .itemTier {
@@ -17,4 +23,10 @@
     justify-content: space-around;
     margin-top: 32px;
     flex-wrap: wrap;
+}
+
+.input-color{
+    position: absolute;
+    top: 20px;
+    right: 30px;
 }
