--- a/src/Components/itemTier/ItemTier.css
+++ b/src/Components/itemTier/ItemTier.css
@@ -1,5 +1,6 @@
 .iTier {
-    width: 300px;
+    position: relative;
+    width: 280px;
     text-align: center;
 }
 
@@ -37,3 +38,9 @@
     color: #000000;
     padding: 5px;
 }
+
+.delete {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+} 
