--- a/src/Components/Tier/Tier.css
+++ b/src/Components/Tier/Tier.css
@@ -11,6 +11,7 @@
     font-size: 32px;
     display: inline-block;
     border: dotted 4px;
+    margin-top: 100px;
     margin-bottom: 100px;
     padding-bottom: 8px;
     background-color: #ffffff;
